--- a/frontend/styles/shared-styles.css
+++ b/frontend/styles/shared-styles.css
@@ -5,6 +5,22 @@
 */
 
 /* Example: CSS class name to center align the content . */
+/* Main layout */
+
+a[highlight] {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.header {
+    padding: 0 var(--lumo-space-m);
+}
+
+.header h1.logo {
+    font-size: 1em;
+    margin: var(--lumo-space-m);
+}
+
 .centered-content {
   margin: 0 auto;
   max-width: 250px;
